After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 608159 - mem leak in g_io_modules_scan_all_in_directory
mem leak in g_io_modules_scan_all_in_directory
Status: RESOLVED FIXED
Product: glib
Classification: Platform
Component: gio
unspecified
Other Linux
: Normal normal
: ---
Assigned To: Tim-Philipp Müller
gtkdev
Depends on:
Blocks:
 
 
Reported: 2010-01-26 14:17 UTC by Christian Persch
Modified: 2010-02-06 12:41 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Don't leak filename in g_io_modules_scan_all_in_directory (681 bytes, patch)
2010-02-05 01:17 UTC, Tim-Philipp Müller
committed Details | Review

Description Christian Persch 2010-01-26 14:17:28 UTC
|filename| is leaked:

==8441== 64 bytes in 1 blocks are definitely lost in loss record 69 of 192
==8441==    at 0x4024E4C: realloc (vg_replace_malloc.c:429)
==8441==    by 0x4A62201: g_realloc (gmem.c:170)
==8441==    by 0x4A815FE: g_string_maybe_expand (gstring.c:361)
==8441==    by 0x4A81C88: g_string_insert_len (gstring.c:696)
==8441==    by 0x4A8215A: g_string_append_len (gstring.c:844)
==8441==    by 0x4A46ADE: g_build_path_va (gfileutils.c:1466)
==8441==    by 0x4A46C84: g_build_filename (gfileutils.c:1736)
==8441==    by 0x481F223: g_io_modules_scan_all_in_directory (giomodule.c:285)
Comment 1 Tim-Philipp Müller 2010-02-05 01:17:11 UTC
Created attachment 153054 [details] [review]
Don't leak filename in g_io_modules_scan_all_in_directory
Comment 2 Matthias Clasen 2010-02-05 02:23:19 UTC
Looks good, please commit
Comment 3 Tim-Philipp Müller 2010-02-06 12:41:40 UTC
commit 813d0d17a65be2ecb5961a96630d11a195ce6a67
Author: Tim-Philipp Müller <tim@centricular.net>
Date:   Fri Feb 5 01:14:20 2010 +0000

    Don't leak filename in g_io_modules_scan_all_in_directory
    
    https://bugzilla.gnome.org/show_bug.cgi?id=608159