Don't leak filename in g_io_modules_scan_all_in_directory

https://bugzilla.gnome.org/show_bug.cgi?id=608159